--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/icon.jpg" 
             ],
             "styles": [
               "src/styles.css"
@@ -96,7 +97,8 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets" ,
+              "src/assets/icon.jpg"
             ],
             "styles": [
               "src/styles.css"
